# cmake-experiment

./: CMakeLists.txt  README.md  build.cmd  build.sh  test.cpp
ext/googletest/: CMakeLists.txt
ext/tinyxml2/: CMakeLists.txt
src/: app.cpp
